@@ -40,7 +40,13 @@
             <artifactId>javafx-controls</artifactId>
             <version>17.0.12</version>
         </dependency>
-
+        <!-- Source: https://mvnrepository.com/artifact/org.openjfx/javafx-web -->
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-web</artifactId>
+            <version>17.0.12</version>
+            <scope>compile</scope>
+        </dependency>
 
     </dependencies>
     <build>
@@ -53,6 +59,10 @@
                     <mainClass>
                         mains.MainFX
                     </mainClass>
+                    <options>
+                        <option>--add-modules</option>
+                        <option>javafx.controls,javafx.fxml,javafx.web</option>
+                    </options>
                 </configuration>
             </plugin>
         </plugins>
